# lamcour2utf8

./: Cargo.toml  Makefile
src/: cli.rs  lib.rs  main.rs
src/lamcour/: mod.rs  test.rs
src/test/: mod.rs
tests/: directory_tree.rs  file.rs  files.rs  pipe.rs
tests/fixtures/expected/: dragonfly_  dragonfly_.utf8
tests/fixtures/expected/one/: eight_  eight_.utf8
tests/fixtures/expected/one/two/: Virginia_  Virginia_.utf8
