[package]
name = "lamcour2utf8"
version = "0.1.0"
authors = ["Eric Rochester <erochest@gmail.com>"]

[dependencies]
clap = "2.32.0"
failure = "0.1.2"
lazy_static = "1.0.2"
walkdir = "2.1.4"

[dev-dependencies]
assert_cmd = "0.6.0"
assert_fs = "0.9.0"
dir-diff = "0.3.1"
predicates = "0.9.0"
spectral = "0.6.0"